# Phish

./: README.md
phish/: CMakeLists.txt  README.md  phish
phish/include/: board.hpp  eval.hpp  search.hpp  tt.hpp  types.hpp  uci.hpp  zobrist.hpp
phish/src/: board.cpp  eval.cpp  main.cpp  search.cpp  tt.cpp  uci.cpp
